New in 0.00.79
Fixed: Heart should be more unhappy when heart strength is low (right now it still looks a little happy)
Removed "?" box next to happy heart.

New in 0.00.78
(changes by Noah P.)
added Activity Level to muscle building formula
added multipliers for muscle and fat mass loss (last two variables in each line)
Modified formula for calculating % fat based on height, weight so that BMI and % fat better match expected values. Also removed age dependence for simplicity.

New in 0.00.77
Heart strength/strain indicators move up with human when window is maximized.

New in 0.00.75
Changed bar chart elements to have icon on the left, then title and label with same font on the right
Changed bar chart axis graphics to be more sparse

New in 0.00.74
Increased readability of categories and values for the stacked bar chart at small sizes
Changed the male/female defaults to:
    Male default height: 5'8", weight 150 lb
    Female default height: 5'5", weight 135 lb
Previously, height and weight were preserved under gender change.  Now the values change to the new defaults when changing gender.
Fixed the animated drag help items to appear on mouse press instead of mouse drag

New in 0.00.73
Muscle diameter for females is 75% of the muscle diameter for males
Added new images and changed order for exercise

New in 0.00.72
Edited help dialog text
Fixed: "Reset All" needs to reset the activity level selector
Balanced diet dialogs are disposed during reset all
Items disappear if you drop them in the play area, but not on the plate/exercise log
Added year month format to control panel
Changed label on graphs from "Time" to "Age"
Changed year month format on graph horizontal axes
Added an animated help message that appears when you start to drag a food or exercise item that suggests you put it on the drop target
Fixed: BMR doesn't reset properly (during reset all) if activity level was changed

New in 0.00.71