@@ -2,8 +2,6 @@
 ###	Todo Sam	####
 ############################
 
--Muscles should be smaller for thin person. Almost negligible when BMI gets near 18.
-
 -Entering values into text boxes does not affect the value unless you hit the enter key.
 If you enter values without hitting enter (e.g., using tab to go to the next box or just hitting play) the values reset.
    >>Make textboxes update incrementally as values are entered.
